--- a/css/responsive.css
+++ b/css/responsive.css
@@ -82,9 +82,9 @@ nav li {
     box-sizing:border-box;
     -moz-box-sizing:border-box;
 }
-.image:hover:after, .image:hover:before {
-    opacity:1;
-}
+  .image:hover:after, .image:hover:before {
+      opacity:1;
+  }
 
 /******************* END Image hover *************/
 
@@ -98,42 +98,34 @@ nav li {
 
  
   /********** Footer      **********/
-  footer{
-    position:absolute;
-    right:0;
-    left: 0;
-    text-align:right;
 
-  }
-
-  a.footersmall {
+  a.footersmall.footerrightsmall{
     visibility: hidden;
+    display: none;
   }
 
-  .footerlarge {
+  a.footersmall.footerrightlarge{
+    float:right;    
     visibility: visible;
-    display:inline-block;
-
+    padding-right: 30px;
   }
-
 
 }
+
 
 /************ Large screens *******************/
 
 @media screen and (min-width: 1024px) {
   
-  /********* Header  ********/
-
   .headerclass {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  z-index: 9999;
-  width: 100%;
-  height: 50px;
-  background-color: #00a087;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 9999;
+    width: 100%;
+    height: 50px;
+    background-color: #00a087;
   }
 
   /************* Landing Page Section  *******/
@@ -190,28 +182,6 @@ nav li {
 
 
   /************* Footer  ************/
-
-  footer {
-    text-align:center;
-    padding-left: 325px;
-  }
-
-  a.footersmall {
-    visibility: hidden;
-  }
-
-  .footerlarge {
-    visibility:hidden ;
-  }
-
-  footer a {
-    margin:auto;
-  }
-
-  footer nav ul {
-    display:inline-block;
-    padding: 0;
-  }
-
+  /* No change for large */
 
 }
